--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 35%;
 
 }
 
@@ -107,4 +107,8 @@
         transform-origin: 50% 50%;
         text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc, 0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc, 0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
     }
+}
+
+body{
+    background: linear-gradient(pink,purple);
 }
